# Chatbot_Medical_Assistant

./: .env  .gitignore  app.json  package-lock.json  package.json
app/: _layout.tsx  allergies.tsx  ambulance.tsx  appointments.tsx  chat.tsx  chat_screen.tsx  doctors.tsx  home.tsx  index.tsx  login.tsx  medical-history.tsx  my-details.tsx  notifications.tsx  patients.tsx  pharmacy.tsx  profile.tsx  recents.tsx  reports.tsx  specialties.tsx
app/chat/: [id].tsx
app/doctor/: [id].tsx
app/patients/: [medical_id].tsx
flask-server/: main.py  pyproject.toml
src/assets/: assets.ts
src/components/: AppButton.tsx  AppInput.tsx  BottomNav.tsx  CategoryCard.tsx  ChatbotFloating.tsx  DoctorCard.tsx  PremiumCard.tsx
src/config/: api.ts
src/screens/: LoginScreen.tsx
src/services/: chatApi.ts  ensureProfile.ts  getMyMedicalId.ts
src/themes/: colors.ts  spacing.ts
