[project]
name = "flask-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
